<resources>
    <string name="app_name">Eventos de limpieza</string>
    <string name="eventos_para_ti">Recomendaciones</string>
    <string name="descripcion_eventos_para_ti">Eventos en los que puedes participar según tu actividad y gustos</string>
    <string name="title_recomendacion_crear_evento">Reportes de contaminación</string>
    <string name="descripcion_recomendacion_crear_evento">Puntos de contaminación que necesitan de tu ayuda</string>
    <string name="titulo_participa_eventos">Eventos donde participas</string>

    <string name="datos_evento">Datos del evento</string>
    <string name="titulo_evento">Título del evento</string>
    <string name="fecha_evento">¿Qué fecha?</string>
    <string name="hora_evento">¿A qué hora?</string>
    <string name="ubicacion_evento">Ubicación</string>
    <string name="descripcion_evento">Descripción</string>
    <string name="escribeDescripcion">Escribe una descripción</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="limpiar">Limpiar</string>
    <string name="limpieza">Limpieza</string>
    <string name="volver_intentar">Volver a intentarlo</string>

    <string name="foto_opcional">Fotografía (opcional)</string>
    <string name="descripcion_opcional">Descripcion (opcional)</string>

    <string name="nuevo_reporte">Nuevo reporte ecológico</string>
    <string name="fecha_hora">Fecha y hora</string>
    <string name="contaminante">Contaminante</string>
    <string name="volumen_residuo">Volumen del residuo</string>
    <string-array name="contaminantes_array">
        <item>Selecciona una opción</item>
        <item>Envases</item>
        <item>Cartón</item>
        <item>Bolsas</item>
        <item>Eléctricos y electrónicos</item>
        <item>Pilas y baterías</item>
        <item>Neumáticos</item>
        <item>Medicamentos</item>
        <item>Escombros</item>
        <item>Varios</item>
    </string-array>

    <string-array name="volumen_array">
        <item>Selecciona una opción</item>
        <item>Cabe en una mano</item>
        <item>Cabe en una mochila</item>
        <item>Cabe en un automóvil</item>
        <item>Cabe en un contenedor</item>
        <item>Cabe en un camión</item>
        <item>Más grande</item>
    </string-array>

    <string name="fotografia">Fotografía</string>

    <string name="titulo_eventos_recomendados">Nuestra recomendación de eventos para ti según tu actividad</string>

    <string name="title_eventos_nav_view">Eventos</string>
    <string name="title_mis_eventos_nav_view">Mis eventos</string>
    <string name="title_recomendacion_crear_evento_nav_view">Reportes</string>
    <string name="perfil">Perfil</string>

    <string name="quiero_participar">Quiero participar</string>
    <string name="volver_intentarlo">Volver a intentarlo</string>
    <string name="puntos">Puntos</string>
    <string name="mas_opciones">Más opciones</string>
    <string name="mis_reportes">Mis reportes</string>
    <string name="mis_eventos_reportes">Mis eventos y reportes</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ver_reporte">Ver reporte</string>

    <string name="admin_evento">Selecciona los participantes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ip">https://adrianpl.000webhostapp.com/</string>
    <!--<string name="ip">http://10.0.0.6/</string>-->


    <string name="sin_internet">Sin conexión a Internet</string>
    <string name="estamos_teniendo_problemas">Estamos teniendo problemas</string>
    <string name="sin_recomendaciones">Sin recomendaciones</string>
    <string name="participas">Participaciones</string>
    <string name="title_activity_actividad_crear">ActividadCrear</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--<string name="server_client_id">192312538883-opoq8nmkcbqmqoc317qogk30r7qurk65.apps.googleusercontent.com</string>-->
    <string name="server_client_id">192312538883-ttvi1tbb3q79kqruirmgr40r1u781e6g.apps.googleusercontent.com</string>
</resources>
