<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/bottom_sheet_opciones"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="53dp"
    android:background="@drawable/redondeado"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="10dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/linea_gris" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Más opciones"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:id="@+id/layoutEventoParati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventos_para_ti"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_eventos_para_ti"
                android:textSize="12sp" />

        </LinearLayout>

        <View style="@style/divider" />

        <LinearLayout
            android:id="@+id/layoutCrearEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_recomendacion_crear_evento"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_recomendacion_crear_evento"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>