<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LimpiezaFragment">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_redondo_amarillo"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:text="@string/limpieza"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/contenidoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/foto_opcional"
                    android:textColor="@color/grisNegro"
                    android:textSize="16.85sp"
                    android:textStyle="bold" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardFoto"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:elevation="5dp"
                    app:strokeWidth="1dp"
                    app:cardCornerRadius="8dp">

                    <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/iconElegirFoto"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/add"
                        />


                    <ImageView
                        android:id="@+id/fotoEvidencia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:scaleType="centerCrop"
                        />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputEditTextMaterial"
                android:hint="@string/descripcion_opcional"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"

                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:lines="7" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/limpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:background="@drawable/boton_redondo_amarillo"
            android:text="@string/limpiar"/>

    </LinearLayout>

</RelativeLayout>