<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.ActividadCrearEvento">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:id="@+id/layout_contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <View style="@style/divider" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--
                <TextView
                    android:id="@+id/textViewTituloEvento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/titulo_evento"
                    android:textColor="@color/grisNegro"
                    android:textSize="16.85sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editTextTitulo"
                    style="@style/inputCrearEvento"
                    android:inputType="text" />

                -->


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputEditTextMaterial"
                    android:hint="@string/titulo_evento"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextTitulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/labelFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/fecha_evento"
                    android:textColor="@color/grisNegro"
                    android:textSize="16.85sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/textViewFecha"
                    style="@style/inputCrearEvento"
                    android:background="@drawable/redondeado_transparente_gris"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />


                <TextView
                    android:id="@+id/labelHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/hora_evento"
                    android:textColor="@color/grisNegro"
                    android:textSize="16.85sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewHora"
                    style="@style/inputCrearEvento"
                    android:background="@drawable/redondeado_transparente_gris"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewUbicacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/ubicacion_evento"
                        android:textColor="@color/grisNegro"
                        android:textSize="16.85sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtObtenerDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="20dp"
                        android:gravity="end"
                        android:text="Obtener"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16.85sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtLatitudLongitud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/textViewDireccion"
                    style="@style/datosEtiqueta"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/redondeado_transparente_gris"
                    android:padding="7dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--
                <TextView
                    android:id="@+id/textViewDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/descripcion_evento"
                    android:textColor="@color/grisNegro"
                    android:textSize="16.85sp"
                    android:textStyle="bold" />



                <EditText
                    android:id="@+id/editTextDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/redondeado_gris"
                    android:gravity="top|start"
                    android:hint="@string/escribeDescripcion"
                    android:inputType="textMultiLine"
                    android:lines="7"
                    android:padding="16dp" />
                -->

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/inputEditTextMaterial"
                    android:hint="@string/escribeDescripcion"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDescripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:lines="7" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/botonCancelar"
                        style="@style/boton_cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/boton_cancelar"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/botonAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:background="@drawable/boton_redondo_verde"
                        android:text="@string/boton_aceptar"
                        android:textColor="@android:color/white"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>