<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verdeFondo"
    tools:context=".DatosEventoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/redondeado"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTituloEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/titulo_evento"
                android:textColor="@color/grisNegro"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dia_evento"
                android:textColor="@color/grisNegro"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextTitulo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTitulo"
                app:layout_constraintTop_toBottomOf="@+id/editTextTitulo" />

            <TextView
                android:id="@+id/labelHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hora_evento"
                android:textColor="@color/grisNegro"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textViewFecha"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewFecha"
                app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

            <TextView
                android:id="@+id/textViewUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ubicacion_evento"
                android:textColor="@color/grisNegro"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textViewHora"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewHora"
                app:layout_constraintTop_toBottomOf="@+id/textViewHora" />

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/descripcion_evento"
                android:textColor="@color/grisNegro"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editTextUbicacion"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextUbicacion"
                app:layout_constraintTop_toBottomOf="@+id/editTextUbicacion" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorGrisBlanco"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewTituloEvento"
                app:layout_constraintTop_toBottomOf="@+id/textViewTituloEvento" />

            <TextView
                android:id="@+id/textViewFecha"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGrisBlanco"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="@+id/editTextTitulo"
                app:layout_constraintStart_toStartOf="@+id/labelFecha"
                app:layout_constraintTop_toBottomOf="@+id/labelFecha" />

            <TextView
                android:id="@+id/textViewHora"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGrisBlanco"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="@+id/textViewFecha"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/labelHora"
                app:layout_constraintTop_toBottomOf="@+id/labelHora" />

            <EditText
                android:id="@+id/editTextUbicacion"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorGrisBlanco"
                android:ems="10"
                android:inputType="textPostalAddress"
                app:layout_constraintEnd_toEndOf="@+id/textViewHora"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewUbicacion"
                app:layout_constraintTop_toBottomOf="@+id/textViewUbicacion" />

            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorGrisBlanco"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="@+id/editTextUbicacion"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textViewDescripcion"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion" />

            <Button
                android:id="@+id/buttonCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="24dp"
                android:background="@color/rojoNaranja"
                android:text="@string/boton_cancelar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <Button
                android:id="@+id/buttonAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/boton_aceptar"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.90" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>